[gd_scene load_steps=5 format=3 uid="uid://cv2s61kx652j"]

[ext_resource type="Script" path="res://GameElements/Player/magic_bolt.gd" id="1_wbacv"]
[ext_resource type="Texture2D" uid="uid://bvprvhxisohd2" path="res://Assets/Player/fire_bolt.png" id="2_naei6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oie8i"]
radius = 25.0

[sub_resource type="CircleShape2D" id="CircleShape2D_g1neg"]
radius = 224.0

[node name="Area2D" type="Area2D" groups=["has_static_properties"]]
modulate = Color(3, 3, 3, 1)
scale = Vector2(0.75, 0.75)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_wbacv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_oie8i")

[node name="MagicBoltSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_naei6")

[node name="AutoTargetZone" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AutoTargetZone"]
position = Vector2(-5.33333, -2.66667)
shape = SubResource("CircleShape2D_g1neg")
one_way_collision_margin = 0.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="AutoTargetZone" to="." method="_on_auto_target_zone_body_entered"]
